--- a/ejercicio16/index.html
+++ b/ejercicio16/index.html
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    <input type="text" id="in">
-	<button onclick="isLegal(in.value)">send</button>
+    <input type="text" id="why">
+	<button onclick="isLegal(why.value)">send</button>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
